refactor: remove Bing sitemap submission and inline Google Search Console API calls
Remove composite GitHub Action for sitemap submission and Bing Webmaster Tools integration. Inline Google Search Console API calls directly into deploy-cloudflare workflow using correct webmasters scope and sc-domain format for Domain properties. Switch from Indexing API to Search Console Sitemaps API with PUT requests expecting 204 status codes.

Update generate-markdown workflow to accept project-name input

--- a/.github/workflows/MD-21-DEV.yml
+++ b/.github/workflows/MD-21-DEV.yml
@@ -24,6 +24,7 @@ jobs:
     name: Generate Markdown Documentation
     uses: ./.github/workflows/generate-markdown.yml
     with:
+      project-name: md-21-dev
       ref: ${{ github.event.pull_request.head.sha || github.sha }}
       targets: "P256K ZKP"
   
