feat: add Cloudflare _redirects files and automated verification for all subdomains (#17)
Add _redirects files to Resources directories for 21-dev, docs-21-dev, and md-21-dev subdomains to handle URL redirects at edge. Implement automated copying of _redirects files in build-slipstream workflow alongside existing _headers logic. Add post-deployment redirect verification steps to deploy-cloudflare workflow with curl-based smoke tests checking 301 status codes for each subdomain's redirect rules.

--- a/.github/workflows/build-slipstream.yml
+++ b/.github/workflows/build-slipstream.yml
@@ -66,6 +66,24 @@ jobs:
           cp "$header_source" "${output_dir}/_headers"
           echo "✅ Copied $header_source → ${output_dir}/_headers"
       
+      - name: Copy static resources
+        run: |
+          website="${{ inputs.website }}"
+          resources_dir="Resources/${website}"
+          output_dir="Websites/${website}"
+          
+          # Copy _redirects if exists
+          if [ -f "${resources_dir}/_redirects" ]; then
+            cp "${resources_dir}/_redirects" "${output_dir}/_redirects"
+            echo "✅ Copied _redirects"
+          fi
+          
+          # Copy robots.txt if exists
+          if [ -f "${resources_dir}/robots.txt" ]; then
+            cp "${resources_dir}/robots.txt" "${output_dir}/robots.txt"
+            echo "✅ Copied robots.txt"
+          fi
+      
       - name: Compile Tailwind CSS
         run: |
           website="${{ inputs.website }}"
