--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -126,6 +126,70 @@ jobs:
           echo "📍 Deployment URL: ${{ steps.cloudflare.outputs.url }}"
           echo "🌿 Branch: ${{ env.DEPLOYMENT_BRANCH }}"
       
+      - name: Verify redirects (docs.21.dev)
+        if: inputs.deploy-to-production == false && inputs.project-name == 'docs-21-dev'
+        run: |
+          PREVIEW_URL="${{ steps.cloudflare.outputs.url }}"
+          echo "🔍 Verifying redirects on preview: $PREVIEW_URL"
+          
+          # Test root redirect
+          status=$(curl -sI -o /dev/null -w "%{http_code}" "${PREVIEW_URL}/")
+          if [ "$status" != "301" ]; then
+            echo "❌ ERROR: / expected 301, got $status"
+            exit 1
+          fi
+          echo "✅ / → 301"
+          
+          # Test /p256k redirect
+          status=$(curl -sI -o /dev/null -w "%{http_code}" "${PREVIEW_URL}/p256k")
+          if [ "$status" != "301" ]; then
+            echo "❌ ERROR: /p256k expected 301, got $status"
+            exit 1
+          fi
+          echo "✅ /p256k → 301"
+          
+          echo "✓ All docs.21.dev redirects verified on preview"
+      
+      - name: Verify redirects (md.21.dev)
+        if: inputs.deploy-to-production == false && inputs.project-name == 'md-21-dev'
+        run: |
+          PREVIEW_URL="${{ steps.cloudflare.outputs.url }}"
+          echo "🔍 Verifying redirects on preview: $PREVIEW_URL"
+          
+          # Test root redirect
+          status=$(curl -sI -o /dev/null -w "%{http_code}" "${PREVIEW_URL}/")
+          if [ "$status" != "301" ]; then
+            echo "❌ ERROR: / expected 301, got $status"
+            exit 1
+          fi
+          echo "✅ / → 301"
+          
+          echo "✓ All md.21.dev redirects verified on preview"
+      
+      - name: Verify redirects (21.dev)
+        if: inputs.deploy-to-production == false && inputs.project-name == '21-dev'
+        run: |
+          PREVIEW_URL="${{ steps.cloudflare.outputs.url }}"
+          echo "🔍 Verifying redirects on preview: $PREVIEW_URL"
+          
+          # Test /docs redirect
+          status=$(curl -sI -o /dev/null -w "%{http_code}" "${PREVIEW_URL}/docs")
+          if [ "$status" != "301" ]; then
+            echo "❌ ERROR: /docs expected 301, got $status"
+            exit 1
+          fi
+          echo "✅ /docs → 301"
+          
+          # Test /api redirect
+          status=$(curl -sI -o /dev/null -w "%{http_code}" "${PREVIEW_URL}/api")
+          if [ "$status" != "301" ]; then
+            echo "❌ ERROR: /api expected 301, got $status"
+            exit 1
+          fi
+          echo "✅ /api → 301"
+          
+          echo "✓ All 21.dev redirects verified on preview"
+      
       - name: Determine sitemap URL
         if: inputs.deploy-to-production == true
         id: sitemap
